add style + next + fix random
still design and next bugs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title></title>
 </head>
 <body>
-    <canvas id="myCanvas" height="500" width="250" style="background-color:white; display:block; margin:auto;"></canvas>
+    <style src="style.css" type="text/css"></style>
+    <canvas id="pieceBoard" height="100" width="100" style="background-color:white; border: 1px solid black; display: inline-block; margin-top: 5%;"></canvas>
+    <canvas id="myCanvas" height="500" width="250" style="background-color:white; border: 1px solid black; display: inline-block; margin:auto"></canvas>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
     <script src="Game.js"></script>
