fix position +not yet add proper next piece

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title></title>
 </head>
 <body>
-    <style src="style.css" type="text/css"></style>
-    <canvas id="pieceBoard" height="100" width="100" style="background-color:white; border: 1px solid black; display: inline-block; margin-top: 5%;"></canvas>
-    <canvas id="myCanvas" height="500" width="250" style="background-color:white; border: 1px solid black; display: inline-block; margin:auto"></canvas>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <canvas id="myCanvas" height="500" width="250" class = "main"></canvas>
+    <canvas id="pieceBoard" height="100" width="100" class = "next"></canvas>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
     <script src="Game.js"></script>
