add score + fix next + add store

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
-    <canvas id="myCanvas" height="500" width="250" class = "main"></canvas>
-    <canvas id="pieceBoard" height="100" width="100" class = "next"></canvas>
+    <canvas id="storeBoard" height="100" width="100" class = "store"></canvas>
+    <canvas id="playBoard" height="500" width="250" class = "main"></canvas>
+    <canvas id="nextBoard" height="100" width="100" class = "next"></canvas>
+    <canvas id="scoreBoard" height="300" width="100" class = "score"></canvas>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
     <script src="Game.js"></script>
