divide + remove stop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <canvas id="scoreBoard" height="300" width="100" class = "score"></canvas>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
+    <script src="checkers.js"></script>
+    <script src="drawing.js"></script>
     <script src="Game.js"></script>
 </body>
 </html>
