add stop title + notation

--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <title></title>
 </head>
 <body>
-    <button id="play" onclick="game()">PLAY!</button>
+    <button id="play" onclick="game()">
+        <span style="color: purple;">T</span>
+        <span style="color: cyan;">E</span>
+        <span style="color: orange;">T</span>
+        <span style="color: blue;">R</span>
+        <span style="color: red;">I</span>
+        <span style="color: lime;">S</span>
+        <span style="color: yellow;">!</span>
+    </button>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
     <canvas id="gameBoard" height="500" width="250" class = "main"></canvas>
     <canvas id="storeBoard" height="100" width="100" class = "store"></canvas>
     <canvas id="nextBoard" height="100" width="100" class = "next"></canvas>
     <canvas id="scoreBoard" height="300" width="100" class = "score"></canvas>
     <canvas id="timerBoard" height="50" width="100" class = "timer"></canvas>
+    <div id="paused" class="pause">paused</div>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
     <script src="checkers.js"></script>
