--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title></title>
 </head>  
 <body>
-    <img src="img/TETRIS.png" id="title">
-    <!-- <div id="cover"></div> -->
+    <input type="checkbox" id="title"></input>
+    <label for="title"><img src="img/TETRIS.png"/></label>
     <table id="menu">
         <tr onclick="game()">
             <td>singleplayer</td>
