working menu with gradiant buttons

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
     <label for="title" id="img"><img src="img/TETRIS.png"/></label>
     <div id="menu">
         <table>
-            <tr onclick="game()">
-                <td>singleplayer</td>
+            <tr>
+                <td class="cell" onclick="game()">
+                    <div class="screen"></div>
+                    <div class="text"> SINGLEPLAYER </div>
+                </td>
             </tr>
             <tr>
-                <td>multiplayer</td>
+                <td class="cell">
+                    <div class="screen"></div>
+                    <div class="text"> MULTIPLAYER </div>
+                </td>
             </tr>
             <tr>
-                <td>options</td>
+                <td class="cell">
+                    <div class="screen"></div>
+                    <div class="text"> OPTIONS </div>
+                </td>
             </tr>
         </table>
     </div>
