divide web pages

--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
     <div id="menu">
         <table>
             <tr>
-                <td class="cell" onclick="game()">
+                <td class="cell" onclick="window.location.href='SinglePlayer.html'">
                     <div class="screen"></div>
                     <div class="text"> SINGLEPLAYER </div>
                 </td>
@@ -30,18 +30,5 @@
         </table>
     </div>
     <link rel="stylesheet" type="text/css" href="./main.css"/>
-    <link rel="stylesheet" type="text/css" href="./canvas.css"/>
-    <canvas id="gameBoard" height="500" width="250" class = "main"></canvas>
-    <canvas id="storeBoard" height="100" width="100" class = "store"></canvas>
-    <canvas id="nextBoard" height="100" width="100" class = "next"></canvas>
-    <canvas id="scoreBoard" height="300" width="100" class = "score"></canvas>
-    <canvas id="timerBoard" height="50" width="100" class = "timer"></canvas>
-    <div id="paused" class="pause">paused</div>
-    <script src="graphics.js"></script>
-    <script src="Piece.js"></script>
-    <script src="checkers.js"></script>
-    <script src="drawing.js"></script>
-    <script src="visuals.js"></script>
-    <script src="Game.js"></script>
 </body>
 </html>
