safe pint starting to work on classes

--- a/SinglePlayer.html
+++ b/SinglePlayer.html
@@ -14,9 +14,6 @@
     <div id="paused" class="pause">paused</div>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
-    <script src="checkers.js"></script>
-    <script src="drawing.js"></script>
-    <script src="visuals.js"></script>
-    <script src="app.js"></script>
+    <script src="SinglePlayer.js"></script>
 </body>
 </html>
