--- a/SinglePlayer.html
+++ b/SinglePlayer.html
@@ -14,6 +14,7 @@
     <div id="paused" class="pause">paused</div>
     <script src="graphics.js"></script>
     <script src="Piece.js"></script>
+    <script src="Game.js"></script>
     <script src="SinglePlayer.js"></script>
 </body>
 </html>
