local multiplayer almost finished + directories

--- a/global/Home.html
+++ b/global/Home.html
@@ -10,13 +10,13 @@
     <div id="menu">
         <table>
             <tr>
-                <td class="cell" onclick="window.location.href='SinglePlayer.html'">
+                <td class="cell" onclick="window.location.href='../SinglePlayer/SinglePlayer.html'">
                     <div class="screen"></div>
                     <div class="text"> SINGLEPLAYER </div>
                 </td>
             </tr>
             <tr>
-                <td class="cell">
+                <td class="cell" onclick="window.location.href='../MultiPlayer_local/LocalMultiPlayer.html'">
                     <div class="screen"></div>
                     <div class="text"> MULTIPLAYER </div>
                 </td>
