--- a/SinglePlayer/SinglePlayer.html
+++ b/SinglePlayer/SinglePlayer.html
@@ -5,16 +5,17 @@
     <title></title>
 </head>  
 <body>
-    <link rel="stylesheet" type="text/css" href="./canvas.css"/>
+    <link rel="stylesheet" type="text/css" href="../global/canvas.css"/>
+    
     <canvas id="gameBoard" height="500" width="250" class = "main"></canvas>
     <canvas id="storeBoard" height="100" width="100" class = "store"></canvas>
     <canvas id="nextBoard" height="100" width="100" class = "next"></canvas>
     <canvas id="scoreBoard" height="300" width="100" class = "score"></canvas>
     <canvas id="timerBoard" height="50" width="100" class = "timer"></canvas>
     <div id="paused" class="pause">paused</div>
-    <script src="graphics.js"></script>
-    <script src="Piece.js"></script>
-    <script src="Game.js"></script>
+    <script src="../global/graphics.js"></script>
+    <script src="../global/Piece.js"></script>
+    <script src="../global/Game.js"></script>
     <script src="SinglePlayer.js"></script>
 </body>
 </html>
